<resources>
    <string name="app_name">Коллекционер</string>
    <string name="title_activity_register">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="test_desc">Родиной арбуза является Южная Африка. Ранее предком культурного арбуза считался колоцинт (Citrullus colocynthis), однако на основе генетических исследований (ДНК из хлоропластов) было выдвинуто предположение, что культурный и дикий арбузы происходят от общего предка — возможно, Citrullus ecirrhosus («дыня тсамма»). Последняя, произрастающая в пустыне Калахари, и поныне является важным источником воды для бушменов.</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="textview">TextView</string>
    <string name="sign_in">sign in</string>
    <string name="add">Add</string>
    <string name="clear">Clear</string>
    <string name="collection">Collection</string>
    <string name="element">Element</string>
    <string name="read">Read</string>
    <string name="set">Set</string>
    <string name="title_activity_main2">Коллекционер</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sendToMailString">Отзывы и предложения можно прислать на почту</string>
    <string name="lobotino1_gmail_com">Lobotino1@gmail.com</string>
    <string name="SendToMail">Отзывы и предложения можно прислать на почту</string>
    <string name="CommunityColl">Коллекции сообщества</string>
    <string name="MyCollections">Мои коллекции</string>
    <string name="_123">123</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_login">Логин</string>
    <string name="Регистрация" />
    <string name="Register">Регистрация</string>
    <string name="register_name">Регистрация</string>
    <string name="reg">Регистрация</string>
    <string name="action_clear_cash">Очистить кэш</string>
    <string name="action_log_items">Вывести в лог все предметы</string>
    <string name="email">Email</string>
    <string name="Registraition">РЕГИСТРАЦИЯ</string>
    <string name="Login">Вход</string>
    <string name="action_go_out">Сменить пользователя</string>
    <string name="title_activity_login1">LoginActivity1</string>
    <string name="Registr">Регистрация</string>
    <string name="MyProfile">Мой профиль</string>
    <string name="Collections">Коллекции</string>
    <string name="Other">Прочее</string>
    <string name="Settings">Настройки</string>
    <string name="Add">Add</string>
    <string name="desc_elem">Описание элемента</string>
    <string name="Ready">Готово</string>
    <string name="name_elem">Название элемента</string>
    <string name="User_List">Список пользователей</string>
    <string name="tv_need_to_sign_in">Вам нужно войти в систему чтобы увидеть свои коллекции</string>
    <string name="add_element">Add element</string>
    <string name="sections_desc">Описании секции</string>
    <string name="section_name">Название секции</string>
    <string name="collection_name">Название коллекции</string>
    <string name="collection_desc">Описание коллекции</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_mail">Почта пользователя</string>
    <string name="user_last_activity">Последняя активность</string>
    <string name="user_avatar">user_avatar</string>
    <string name="btn_i_have">Список всех коллекций</string>
    <string name="wish">Желаемое</string>
    <string name="trade_list">Список на обмен</string>
    <string name="enter_section">Введине название и описание секции</string>
    <string name="enter_collection">Введине название и описание коллекции</string>
    <string name="enter_element">Добавьте фотографию, название и описание элемента</string>
</resources>
