<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/Collections">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/nav_community_colletions"
                    android:icon="@drawable/ic_menu_gallery"
                    android:title="@string/CommunityColl" />
                <item
                    android:id="@+id/nav_my_collections"
                    android:icon="@drawable/ic_saved"
                    android:title="@string/MyCollections" />
            </group>
        </menu>

    </item>
    <item android:title="@string/Other">
        <menu>
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/nav_my_profile"
                    android:icon="@drawable/ic_profile"
                    android:title="@string/MyProfile" />
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/Settings" />
            </group>
        </menu>
    </item>


</menu>
