<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/btnBackToMainFromLogin"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:elevation="0dp"
        android:text="@string/back"
        android:layout_marginStart="11dp"
        android:layout_marginTop="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etLoginLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_row="1"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text"
        android:textAlignment="viewStart"
        tools:ignore="ObsoleteLayoutParam"
        android:layout_marginTop="21dp"
        android:layout_below="@+id/btnBackToMainFromLogin"
        android:layout_alignStart="@+id/btnBackToMainFromLogin" />

    <EditText
        android:id="@+id/etPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/etLoginLogin"
        android:layout_alignStart="@+id/etLoginLogin" />

    <Button
        android:id="@+id/btnLoginConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/sign_in"
        android:layout_marginEnd="14dp"
        android:layout_below="@+id/etPasswordLogin"
        android:layout_alignParentEnd="true" />

    <TextView
        android:id="@+id/tvLoginStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnLoginConfirm"
        android:layout_alignBottom="@+id/btnLoginConfirm"
        android:layout_toStartOf="@+id/btnLoginConfirm" />

</RelativeLayout>