<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout_sign_in"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.lobotino.collector.NavigationActivity"
    android:background="@color/colorBackground"
    >

    <EditText
        android:id="@+id/etLoginLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/login"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/etLoginLogin"
        android:layout_alignStart="@id/etLoginLogin"
        android:layout_alignEnd="@+id/etLoginLogin"/>

    <TextView
        android:id="@+id/tvLoginStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/etLoginPassword"
        android:layout_below="@+id/etLoginPassword"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="3dp"
        style = "@style/AppTheme.LoginTextStyle" />

    <Button
        android:id="@+id/btnGoToLogin"
        style="@style/AppTheme.ButtonReg"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="152dp"
        android:layout_marginTop="8dp"
        android:text="@string/Login"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_below="@+id/etLoginPassword"
        android:layout_alignEnd="@+id/buttonGoToReg" />

    <Button
        android:id="@+id/buttonGoToReg"
        style="@style/AppTheme.ButtonReg"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:text="@string/Registr"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:layout_alignTop="@+id/btnGoToLogin"
        android:layout_alignBottom="@+id/btnGoToLogin"
        android:layout_alignEnd="@+id/etLoginLogin" />

</RelativeLayout>
