<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <TextView
            android:id="@+id/tv_need_to_sign_in3"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_sign_in"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/enter_collection"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etCollectionName"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_need_to_sign_in3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/collection_name"
            android:inputType="textShortMessage"
            android:textAlignment="viewStart"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etCollectionDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etCollectionName"
            android:layout_alignStart="@+id/etCollectionName"
            android:layout_alignEnd="@+id/etCollectionName"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/collection_desc"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/button_accept"
            style="@style/AppTheme.ButtonReg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/etCollectionDesc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/Ready"
            android:textAllCaps="true"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvAddElemStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etCollectionDesc"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="@+id/etCollectionDesc"
            android:layout_marginTop="9dp"
            android:text=""
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>