<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_need_to_sign_in4"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:text="@string/enter_element"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/elemImage"
            android:layout_width="230dp"
            android:layout_height="230dp"
            android:layout_below="@+id/tv_need_to_sign_in4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:contentDescription=""
            app:srcCompat="@drawable/add_element_photo"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/etElemName"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/elemImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/name_elem"
            android:inputType="textShortMessage"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/etElemDesc"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etElemName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/desc_elem"
            android:inputType="textMultiLine"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/button_accept"
            style="@style/AppTheme.ButtonReg"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@+id/etElemDesc"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:text="@string/Ready"
            android:textAllCaps="true"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/tvAddElemStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etElemDesc"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="@+id/etElemDesc"
            android:layout_marginTop="9dp"
            android:text=""
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold" />

    </RelativeLayout>
</ScrollView>